# Raytracer

./: CMakeLists.txt  todo.TODO
.github/workflows/: ci.yml
RayTracer/include/Core/: Camera.hpp  Ray.hpp  Rectangle3D.hpp
RayTracer/include/Exceptions/: RayTracerException.hpp
RayTracer/include/Factory/: PrimitiveFactory.hpp
RayTracer/include/Math/: Point3D.hpp  Vector3D.hpp
RayTracer/include/Primitives/: IPrimitive.hpp  Sphere.hpp
RayTracer/source/: main.cpp
RayTracer/source/Core/: Camera.cpp  Ray.cpp  Rectangle3D.cpp  Renderer.cpp  SceneParser.cpp
RayTracer/source/Math/: Point3D.cpp
RayTracer/source/Primitives/: Sphere.cpp
include/Core/: Camera.hpp  ConfigUtils.hpp  PrimitiveGroup.hpp  Ray.hpp  Renderer.hpp  SceneParser.hpp
include/Factory/: PluginFactory.hpp  PrimitiveFactory.hpp
include/Light/: ALight.hpp  AmbientLight.hpp  DirectionalLight.hpp  ILight.hpp  PointLight.hpp
include/Loader/: DLLoader.hpp  IDLLoader.hpp
include/Materials/: AMaterial.hpp  IMaterial.hpp  Lambertian.hpp  MaterialUtils.hpp  Phong.hpp  Reflective.hpp  Refractive.hpp  Texture.hpp  Transparency.hpp
include/Math/: Point3D.hpp  Vector3D.hpp
include/Primitives/: AFractal.hpp  APrimitive.hpp  Box.hpp  Cone.hpp  Cylinder.hpp  Fractal_Mandelbulb.hpp  IPrimitive.hpp  Mandelbulb.hpp  MengerSponge.hpp  MobiusStrip.hpp  Obj.hpp  Plane.hpp  Sierpinski.hpp  Sphere.hpp  TangleCube.hpp  Torus.hpp  Triangle.hpp
raytracer/: CMakeLists.txt
raytracer/include/: RayTracerException.hpp
raytracer/include/Core/: Ray.hpp  Rectangle3D.hpp
raytracer/include/Math/: Point3D.hpp
raytracer/include/Primitives/: Sphere.hpp
raytracer/source/: RayTracerException.cpp
raytracer/source/Core/: Ray.cpp  Rectangle3D.cpp
raytracer/source/Math/: Vector3D.cpp
scenes/: Plugins_Docu.md  scene.cfg  scene_allShapes.cfg  scene_box.cfg  scene_cat.cfg  scene_claude.cfg  scene_demo.cfg  scene_fractal.cfg  scene_france_cylinder.cfg  scene_graph_cylinder.cfg  scene_group.cfg  scene_infinite_cylinder.cfg  scene_lambertian.cfg  scene_light.cfg  scene_limited_cylinder.cfg  scene_mirrorBox.cfg  scene_obj.cfg  scene_plane.cfg  scene_pointlight.cfg  scene_pointlight_simple.cfg  scene_presentationRow.cfg  scene_pyramid.cfg  scene_rect.cfg  scene_showcase.cfg  scene_showcase_bof.cfg  scene_spheres.cfg  scene_tangleCube.cfg  scene_test_ambient_only.cfg  scene_texture_test.cfg  scene_transparency.cfg  scene_transparent_Cylinders.cfg  scene_triangle.cfg
scenes/boxes/: scene_box.cfg  scene_boxInTheSky.cfg  scene_cube.cfg  scene_rect.cfg
scenes/cones/: scene_hourglass.cfg  scene_ice_cream.cfg  scene_infinite_cone.cfg  scene_simple_cone.cfg
scenes/demo/: scene_Showcase.cfg  scene_Specular_Lambertian.cfg  scene_cat.cfg  scene_france_cylinder.cfg  scene_glassBall.cfg  scene_graph_cylinder.cfg  scene_mid.cfg  scene_mid2.cfg  scene_mirrorBox.cfg  scene_presentationRow.cfg
scenes/fractals/: scene_PastaMobius.cfg  scene_fractal2.cfg
scenes/pointlight/: desert_sunset.cfg  japanese_temple_night.cfg  scene_pointlight_attenuation.cfg  scene_pointlight_basic.cfg  scene_pointlight_color.cfg  scene_pointlight_many.cfg  scene_pointlight_radius.cfg  scene_pointlight_softshadow_sim.cfg  scene_pointlight_sunset.cfg  scene_pointlight_transform.cfg
scenes/primitives/: scene_box.cfg  scene_hourglass.cfg  scene_ice_cream.cfg  scene_infinite_cone.cfg  scene_pyramid.cfg  scene_rect.cfg  scene_sphere.cfg  scene_texture_test.cfg
source/: main.cpp
source/Core/: Camera.cpp  PrimitiveGroup.cpp  Renderer.cpp  SceneParser.cpp
source/Exceptions/: RayTracerException.cpp
source/Factory/: PrimitiveFactory.cpp
source/Light/: ALight.cpp  AmbientLight.cpp  DirectionalLight.cpp  PointLight.cpp
source/Materials/: Lambertian.cpp  Phong.cpp  Reflective.cpp  Refractive.cpp  Texture.cpp  Transparency.cpp
source/Math/: Point3D.cpp  Vector3D.cpp
source/Primitives/: AFractal.cpp  APrimitive.cpp  Box.cpp  Cone.cpp  Cylinder.cpp  Fractal_Mandelbulb.cpp  Mandelbulb.cpp  MengerSponge.cpp  MobiusStrip.cpp  Obj.cpp  Plane.cpp  Sierpinski.cpp  Sphere.cpp  TangleCube.cpp  Torus.cpp  Triangle.cpp
